# openIngestion

./: .gitignore  ANALYSIS.md  LICENSE  README.md  __init__.py  by_sentence.py  document.py  pyproject.toml  specv3.md  test_pipeline.py
.github/workflows/: publish-to-pypi.yml
chef/: __init__.py  base.py  docling_chef.py  mineru_chef.py
chunker/: __init__.py  base.py  by_block.py  by_recursive.py  by_semantic.py  by_sentence.py  by_slumber.py  by_token.py  multipass.py
fetcher/: __init__.py  local.py  sharepoint.py  web.py
genie/: __init__.py  base.py  openai_genie.py
openingestion/: __init__.py  document.py  parser.py
openingestion/chef/: __init__.py  mineru_chef.py
openingestion/chunker/: __init__.py  base.py  by_block.py  by_recursive.py  by_semantic.py  by_sentence.py  by_slumber.py  by_token.py
openingestion/fetcher/: __init__.py  base.py  cloud.py  database.py  web.py
openingestion/genie/: base.py  openai_genie.py
openingestion/porter/: __init__.py
openingestion/refinery/: __init__.py  protocols.py  rag_refinery.py
openingestion/utils/: __init__.py  embedder.py  tokenizer.py
porter/: __init__.py  base.py  json_porter.py
refinery/: __init__.py  base.py  contextual_rag.py  rag_refinery.py  vision.py
testscript/: output_chunks_docling.json  output_chunks_docling.jsonl  output_chunks_multipass.json  output_chunks_multipass.jsonl  output_chunks_real_sentenceGD.jsonl  output_chunks_real_sentenceLE.jsonl  output_chunks_real_sentencePRI.jsonl  output_chunks_real_sentenceabscenceexceptionnelles.jsonl  output_chunks_real_sentenceaghadoe.jsonl  output_chunks_real_sentenceconditiongeneral.jsonl  output_chunks_real_sentenceconditionparticulieres.jsonl  output_chunks_real_sentencecooptation.jsonl  output_chunks_real_sentencedue.jsonl  output_chunks_real_sentencedystrie.jsonl  output_chunks_real_sentenceeargneslarial.jsonl  output_chunks_real_sentenceforfaitheure.jsonl  output_chunks_real_sentenceforfaitjours.jsonl  output_chunks_real_sentenceguidedev.jsonl  output_chunks_real_sentenceindeminiteaghadoe.jsonl  output_chunks_real_sentenceindemnitekardi.jsonl  output_chunks_real_sentenceindemnitelearn&go.jsonl  output_chunks_real_sentenceinfoarrettravail.jsonl  output_chunks_real_sentenceinfoconges.jsonl  output_chunks_real_sentenceinteressementaghadoe.jsonl  output_chunks_real_sentenceinteressementdystrie.jsonl  output_chunks_real_sentenceinteressementlearnandgo.jsonl  output_chunks_real_sentencejours.jsonl  output_chunks_real_sentencelearn&g.jsonl  output_chunks_real_sentencelettreavenant.jsonl  output_chunks_real_sentencelivretetudiant.jsonl  output_chunks_real_sentencenoticeinformation.jsonl  output_chunks_real_sentencenoticeinformation2.jsonl  output_chunks_real_sentencerappotpri.jsonl  output_chunks_real_sentences&g.jsonl  output_chunks_real_sentencesgti.jsonl  test_chonkie_core.py  test_chonkie_semantic.py  test_draw_chunks.py  test_fetcher_web.py  test_pipeline.py  (+4 more)
utils/: __init__.py  draw_chunks.py  embedder.py
